<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DeFogón</string>
    <string name="date_today">Today</string>
    <string name="date_yesterday">Yesterday</string>
    <string name="date_days_ago">%1$s days ago</string>
    <string name="date_just_now">Just now</string>
    <string name="date_minutes_ago">%1%s minutes ago</string>
    <string name="date_hours_ago">%1$s hours ago</string>
    <string name="toggle_off">Off</string>
    <string name="toggle_on">On</string>
    <string name="check_your_internet_connection">Check your Internet connection</string>
    <string name="ok">OK</string>
    <string name="error_loading_content">Error loading the content</string>
    <string name="connecting">Connecting...</string>
    <string name="autolocating">Autolocating...</string>
    <string name="language_code">languageCode</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="word_word">%1$s - %2$s</string>
    <string name="look_for_song">Search for a song</string>
    <string name="favorite_songs">Favorite Songs</string>
    <string name="send_song">Submit a song</string>
    <string name="report_song">Report a song</string>
    <string name="home">All songs</string>
    <string name="send_email">Send e-mail</string>
    <string name="send_new_song_subject">I want to add this song</string>
    <string name="report_song_subject">I want to report this song</string>
    <string name="no_favorite_songs">You haven\'t favorited any song yet.</string>
    <string name="screen_awake">The screen will keep awake</string>
    <string name="screen_sleep">The screen will turn off after not using the app</string>
    <string name="screen_awake_menu">Screen awake</string>
    <string name="screen_off_menu">Screen off</string>
    <string name="next_song">Next song</string>
    <string name="random_mode">Random mode</string>
    <string name="rate_us">You liked it? Rate us!</string>

</resources>
