<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/medium_padding"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/extra_big_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/medium_padding"
            android:paddingLeft="@dimen/drawer_title_padding_left"
            android:paddingTop="@dimen/medium_padding"
            android:text="@string/app_name"
            android:textColor="@color/primary"
            android:textSize="@dimen/drawer_title"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.75dp"
            android:layout_marginBottom="@dimen/medium_padding"
            android:background="@color/secondary" />

        <TextView
            android:id="@+id/drawer_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawer_selector"
            android:clickable="true"
            android:drawableLeft="@drawable/selector_drawer_songs"
            android:drawablePadding="@dimen/medium_padding"
            android:gravity="center_vertical"
            android:padding="@dimen/big_padding"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textSize="@dimen/drawer_text" />

        <TextView
            android:id="@+id/drawer_favorite_songs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawer_selector"
            android:clickable="true"
            android:drawableLeft="@drawable/selector_drawer_favorite"
            android:drawablePadding="@dimen/medium_padding"
            android:gravity="center_vertical"
            android:padding="@dimen/big_padding"
            android:text="@string/favorite_songs"
            android:textColor="@color/black"
            android:textSize="@dimen/drawer_text" />

        <TextView
            android:id="@+id/drawer_random_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawer_selector"
            android:clickable="true"
            android:drawableLeft="@drawable/selector_drawer_random"
            android:drawablePadding="@dimen/medium_padding"
            android:gravity="center_vertical"
            android:padding="@dimen/big_padding"
            android:text="@string/random_mode"
            android:textColor="@color/black"
            android:textSize="@dimen/drawer_text" />

        <TextView
            android:id="@+id/drawer_rate_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawer_selector"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_drawer_rate_unselect"
            android:drawablePadding="@dimen/medium_padding"
            android:gravity="center_vertical"
            android:padding="@dimen/big_padding"
            android:text="@string/rate_us"
            android:textColor="@color/black"
            android:textSize="@dimen/drawer_text"
            android:visibility="gone" />

        <TextView
            android:id="@+id/drawer_send_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawer_selector"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_drawer_send_unselected"
            android:drawablePadding="@dimen/medium_padding"
            android:gravity="center_vertical"
            android:padding="@dimen/big_padding"
            android:text="@string/send_song"
            android:textColor="@color/black"
            android:textSize="@dimen/drawer_text" />

        <TextView
            android:id="@+id/drawer_report_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawer_selector"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_drawer_report_unselect"
            android:drawablePadding="@dimen/medium_padding"
            android:gravity="center_vertical"
            android:padding="@dimen/big_padding"
            android:text="@string/report_song"
            android:textColor="@color/black"
            android:textSize="@dimen/drawer_text" />

    </LinearLayout>
</ScrollView>